--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 </style>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<link rel="icon" type="image/x-icon" href="icon.jpg">
+<link rel="icon" type="image/x-icon" href="icon.png">
 <title>Akari MC</title>
 <div class="pagecentre">
 <h1>Akari MC by Lilith (Akar_VT)</h1>
