--- a/recpies/index.html
+++ b/recpies/index.html
@@ -15,7 +15,7 @@
 
 </style>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<link rel="icon" type="image/x-icon" href="../icon.jpg">
+<link rel="icon" type="image/x-icon" href="../icon.png">
 <title>Akar MC | Custom Recipies</title>
 <h1 style="text-align: center;">Akari MC | Custom Recipies</h1>
 <select id="filter" onchange="update_filter()">
