--- a/commands/index.html
+++ b/commands/index.html
@@ -14,7 +14,7 @@
     }
 </style>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<link rel="icon" type="image/x-icon" href="../icon.jpg">
+<link rel="icon" type="image/x-icon" href="../icon.png">
 <title>Akari MC | Custom Commands</title>
 <button onclick='window.location.replace("../")'>Back</button><br><br>
 <script>
