--- a/mc-chat/index.html
+++ b/mc-chat/index.html
@@ -30,7 +30,7 @@
 <title>Akari MC | Game Chat</title>
 <button onclick='window.location.replace("../")'>Back</button><br><br>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<link rel="icon" type="image/x-icon" href="icon.jpg">
+<link rel="icon" type="image/x-icon" href="../icon.png">
 <centre>
 <widgetbot
     class="widgetbot"
