--- a/recpies/index.html
+++ b/recpies/index.html
@@ -43,8 +43,8 @@
     <!--
     <div id="dataname">
         <h3>[name]</h3>
-        <p>[recipetype]</p>
-        <img src="_.png"></img>
+        <p>Crafting Table Recipe</p>
+        <img src="_craft.png"></img>
     </div>
     -->
     <div id="ender_pearl_craft">
@@ -88,7 +88,7 @@
 <!--
     <div id="dataname">
         <h3>[name]</h3>
-        <p>[recipetype]</p>
+        <p>Smithing Table Recipies</p>
         <img src="_smith.png"></img>
     </div>
     -->
@@ -109,7 +109,7 @@
 <!--
     <div id="dataname">
         <h3>[name]</h3>
-        <p>[recipetype]</p>
+        <p>Stone Cutter Recipies</p>
         <img src="_stonecutter.png"></img>
     </div>
     -->
@@ -130,7 +130,7 @@
 <!--
     <div id="dataname">
         <h3>[name]</h3>
-        <p>[recipetype]</p>
+        <p>Loom Recipies</p>
         <img src="_loom.png"></img>
     </div>
     -->
@@ -151,7 +151,7 @@
 <!--
     <div id="dataname">
         <h3>[name]</h3>
-        <p>[recipetype]</p>
+        <p>Smoker Furnice Recipies</p>
         <img src="_smoke.png"></img>
     </div>
     -->
@@ -172,7 +172,7 @@
 <!--
     <div id="dataname">
         <h3>[name]</h3>
-        <p>[recipetype]</p>
+        <p>Furnice Recipies</p>
         <img src="_furncie.png"></img>
     </div>
     -->
@@ -193,7 +193,7 @@
 <!--
     <div id="dataname">
         <h3>[name]</h3>
-        <p>[recipetype]</p>
+        <p>Blast Furnice Recipies</p>
         <img src="_blast.png"></img>
     </div>
     -->
