--- a/commands/index.html
+++ b/commands/index.html
@@ -12,11 +12,81 @@
     
     margin: auto;
     }
+    .commands code {
+        font-size: 15;
+    }
+    .commands p{
+        font-size: 14;
+    }
+    .commands_alt {
+        display:none;
+    }
+    .commands_alt p {
+        font-size: 14;
+    }
+    .commands_alt code {
+        font-size: 15;
+    }
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <link rel="icon" type="image/x-icon" href="../icon.png">
 <title>Akari MC | Custom Commands</title>
 <button onclick='window.location.replace("../")'>Back</button><br><br>
+<h1 style="text-align: center;">Custom Commands</h1>
+<input placeholder="Search" id="search_bar" onchange="search()"></input> <button onclick="search()"><i class="fa fa-search"></i></button>
+<div id="commands_container">
+    <!--
+    <div id="[name]" class="commands">
+        <h3>[name]</h3>
+        <p><code>[command]</code></p>
+        <p>[info]</p>
+    </div>
+    <div id="[smallname]" class="commands_alt">
+        <h3>[name]</h3>
+        <p><code>[command]</code></p>
+        <p>[info]</p>
+    </div>
+    -->
+    <div id="teleport" class="commands">
+        <h3>Teleport</h3>
+        <p><code>/user-tp</code></p>
+        <p>Opens a interface that allows you to either enter co-ordinates or select a player to teleport to.</p>
+    </div>
+    <div id="tp" class="commands_alt">
+        <h3>Teleport</h3>
+        <p><code>/user-tp</code></p>
+        <p>Opens a interface that allows you to either enter co-ordinates or select a player to teleport to.</p>
+    </div>
+</div>
 <script>
-    
+    function search() {
+        let prompt = document.getElementById("search_bar").value.toLowerCase();
+        const search_array = ["teleport","tp"];
+        let max_index = search_array.length;
+        let min_index = 0;
+        hide_all(search_array, max_index);
+        var indexd = min_index;
+        while (indexd <= max_index) {
+            var current_array_data = search_array[indexd];
+            current_array_data.replace("_", " ");
+            if(current_array_data.includes(prompt) === true){
+                document.getElementById(search_array[indexd]).style.display = "";
+            };
+            if(prompt == current_array_data) {
+                document.getElementById(search_array[indexd]).style.display = "";
+            }
+            else{
+            var indexd = indexd + 1;
+            };
+        };
+    };
+    function hide_all(search_array, max_index) {
+        var indexd = 0;
+        while (indexd <= max_index) {
+            document.getElementById(search_array[indexd]).style.display = "none";
+            var indexd = indexd + 1;
+        };
+        return;
+    };
 </script>
