--- a/commands/index.html
+++ b/commands/index.html
@@ -27,15 +27,16 @@
 <h1 style="text-align: center;">Custom Commands</h1>
 <select id="command_selector" onchange="reload_list()">
     <!--
-    <optgroup></optgroup>
+    <optgroup label=""></optgroup>
     -->
     <!--
     <option value=""></option>
     -->
     <option value="all">All Commands</option>
-    <optgroup>Commands</optgroup>
+    <optgroup label="Commands">
     <option value="msg">Message A Player</option>
     <option value="tp">Teleportation</option>
+    </optgroup>
 </select>
 <div id="commands_container">
     <!--
