--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <link rel="icon" type="image/x-icon" href="icon.png">
-<title>Akari MC</title>
+<title>Akari MC | Home</title>
 <div class="pagecentre">
 <h1>Akari MC by Lilith (Akar_VT)</h1>
 <button onclick='window.location.replace("/recpies/")'>Custom Recipies</button><br><br>
