--- a/recpies/index.html
+++ b/recpies/index.html
@@ -18,7 +18,8 @@
 <link rel="icon" type="image/x-icon" href="../icon.png">
 <title>Akar MC | Custom Recipies</title>
 <h1 style="text-align: center;">Akari MC | Custom Recipies</h1>
-<select id="filter" onchange="update_filter()">
+<div class="pagecentre" id="container_craft"><br><br><button onclick='window.location.replace("../")'>Back</button><br><br>
+    <select id="filter" onchange="update_filter()">
     <option value="container_craft">Crafting Table</option>
     <option value="container_smith">Smithing Table</option>
     <option value="container_stoner">Stone Cutter</option>
@@ -27,7 +28,6 @@
     <option value="container_furnice">Furnice</option>
     <option value="container_blast">Blast Furnice</option>
 </select>
-<div class="pagecentre" id="container_craft"><br><br><button onclick='window.location.replace("../")'>Back</button><br><br>
     <h1>Crafting Table Recipies</h1>
     <select id="craft_selctor" onchange="update_craft()">
     <!--
@@ -126,6 +126,15 @@
     </div>
 </div>
 <div class="pagecentre" id="container_smith"><br><br><button onclick='window.location.replace("../")'>Back</button><br><br>
+    <select id="filter" onchange="update_filter()">
+    <option value="container_craft">Crafting Table</option>
+    <option value="container_smith">Smithing Table</option>
+    <option value="container_stoner">Stone Cutter</option>
+    <option value="container_loom">Loom</option>
+    <option value="container_smoke">Smoker</option>
+    <option value="container_furnice">Furnice</option>
+    <option value="container_blast">Blast Furnice</option>
+</select>
     <h1>Smithing Table Recipies</h1>
     <select id="smith_selctor" onchange="update_smith()">
     <!--
@@ -154,6 +163,15 @@
 <div class="pagecentre" id="container_stoner"><br><br>
     <h1>Stone Cutter Recipies</h1>
     <select id="stoner_selctor" onchange="update_stoner()"><button onclick='window.location.replace("../")'>Back</button><br><br>
+        <select id="filter" onchange="update_filter()">
+    <option value="container_craft">Crafting Table</option>
+    <option value="container_smith">Smithing Table</option>
+    <option value="container_stoner">Stone Cutter</option>
+    <option value="container_loom">Loom</option>
+    <option value="container_smoke">Smoker</option>
+    <option value="container_furnice">Furnice</option>
+    <option value="container_blast">Blast Furnice</option>
+</select>
     <!--
     <optgroup label=""></optgroup>
     -->
@@ -180,6 +198,15 @@
 <div class="pagecentre" id="container_loom"><br><br>
     <h1>Loom Recipies</h1>
     <select id="_loomselctor" onchange="update_loom()"><button onclick='window.location.replace("../")'>Back</button><br><br>
+        <select id="filter" onchange="update_filter()">
+    <option value="container_craft">Crafting Table</option>
+    <option value="container_smith">Smithing Table</option>
+    <option value="container_stoner">Stone Cutter</option>
+    <option value="container_loom">Loom</option>
+    <option value="container_smoke">Smoker</option>
+    <option value="container_furnice">Furnice</option>
+    <option value="container_blast">Blast Furnice</option>
+</select>
     <!--
     <optgroup label=""></optgroup>
     -->
@@ -206,6 +233,15 @@
 <div class="pagecentre" id="container_smoke"><br><br>
     <h1>Smoker Furnice Recipies</h1>
     <select id="smoke_selctor" onchange="update_smoke()"><button onclick='window.location.replace("../")'>Back</button><br><br>
+        <select id="filter" onchange="update_filter()">
+    <option value="container_craft">Crafting Table</option>
+    <option value="container_smith">Smithing Table</option>
+    <option value="container_stoner">Stone Cutter</option>
+    <option value="container_loom">Loom</option>
+    <option value="container_smoke">Smoker</option>
+    <option value="container_furnice">Furnice</option>
+    <option value="container_blast">Blast Furnice</option>
+</select>
     <!--
     <optgroup label=""></optgroup>
     -->
@@ -232,6 +268,15 @@
 <div class="pagecentre" id="container_furnice"><br><br>
     <h1>Furnice Recipies</h1>
     <select id="furnice_selctor" onchange="update_furnice()"><button onclick='window.location.replace("../")'>Back</button><br><br>
+        <select id="filter" onchange="update_filter()">
+    <option value="container_craft">Crafting Table</option>
+    <option value="container_smith">Smithing Table</option>
+    <option value="container_stoner">Stone Cutter</option>
+    <option value="container_loom">Loom</option>
+    <option value="container_smoke">Smoker</option>
+    <option value="container_furnice">Furnice</option>
+    <option value="container_blast">Blast Furnice</option>
+</select>
     <!--
     <optgroup label=""></optgroup>
     -->
@@ -264,6 +309,15 @@
 <div class="pagecentre" id="container_blast"><br><br>
     <h1>Blast Furnice Recipies</h1>
     <select id="blast_selctor" onchange="update_blast()"><button onclick='window.location.replace("../")'>Back</button><br><br>
+        <select id="filter" onchange="update_filter()">
+    <option value="container_craft">Crafting Table</option>
+    <option value="container_smith">Smithing Table</option>
+    <option value="container_stoner">Stone Cutter</option>
+    <option value="container_loom">Loom</option>
+    <option value="container_smoke">Smoker</option>
+    <option value="container_furnice">Furnice</option>
+    <option value="container_blast">Blast Furnice</option>
+</select>
     <!--
     <optgroup label=""></optgroup>
     -->
